demux: adaptive: fix canceling current chunk without full download

read data could be infinite (stream)
refs #25562

(cherry picked from commit fbebef63e6cb9f2f200c6012bbdb0dbc4fa3aa9b)